trunk/webapp/themes/jebmarket/css/theme.css
/* ... */
/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200) {
    .carousel-caption h1 {
        font-size: 40px;
        font-weight: 600;
        line-height: 65px;
        width: 500px;
    }
    .carousel-caption {
        bottom: 40%;
        text-align: left;
    }
    .carousel-caption p {
        font-size: 25px;
    }
    .navbar-brand.logo {
        margin: 1px 0 0 -10px;
        display: block;
        width: 150px;
        height: 65px;
        text-indent: -9999px;
        background: url(../images/jebmarket.png) no-repeat 0 0px;
        -webkit-transition: background 0.5s;
        -moz-transition: background 0.5s;
        transition: background 0.5s;
        float: left;
    }
    .navbar-brand.logo:hover {
        background-position: 0 -64px;
    }
    .navbar-top > li > a {
        margin: 5px 0px 0px 10px;
        font-size: 12px;
    }
    .carousel-inner > .item > img {
        position: absolute;top: 0;left: 0; box-shadow: 0 0 3px #000 inset; width: 100%;
    }
    .carousel-inner>.item>img, .carousel-inner>.item>a>img{
        max-width: none;
    }
    .navbar-top {
        margin-right: -7px;
        margin-left: -150px;
    }
    .navbar.navbar-main {
        margin-bottom: 0;
        margin-top: 0;
    }
    .navbar-top > li > a.facebook {
        width: 16px; height: 16px;margin: 5px 0 0 10px;
    }
    .navbar-top > li > a.twitter {
        width: 16px; height: 16px;margin: 5px 0 0 10px;
    }
    .navbar-top > li > a.google {
        width: 16px; height: 16px;margin: 5px 0 0 10px;
    }
    h1.page-title, .h1.page-title {
        font-size: 30px;
        margin: 20px 0; padding: 20px 0;
    }
    .bs-callout p:last-child{
        font-size: 14px;
    }
    .bs-callout h4{
        font-size: 18px;
    }
    .footer-logo {
        transform: scale(1);
        -webkit-transform: scale(1);
        -moz-transform: scale(1);
/*        -0-transform: scale(1);*/
        margin-top: -10px;
        margin-right: 0;
    }
    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
        border-color: #101010;
        position: static;
        background-color: #000;
        margin: 8px 0 0 0;
        padding: 0;
        width: inherit;
    }
    .navbar-nav .open .dropdown-menu>li>a, .navbar-nav .open .dropdown-menu .dropdown-header {
        padding: 5px 15px 5px 25px;
    }
    .mini-signup-form-wrapper {
        bottom: 15%;
    }
    .navbar-top  .dropdown-menu > li > a {
        font-size: 13px;
        padding: 2px 10px;
        line-height: 1.428571429;
    }
    #header_right .dropdown-menu{
        margin: 0;
    }
    .navbar-footer > li > a {
        font-size: 12px;
    }
}
.badge-inverse {
    background: #fff; color: #555;
}
.label-field {
    font-weight: 600; background: #f6f6f6; text-transform: uppercase; font-size: 0.9em; text-align: right; max-width: 60px;
}
.modal-body {
    max-height: 450px; overflow-y: auto;
}
.modal-title.page-title {
    color: #EC6030; font-weight: 600;
}
.navbar-store {
    margin: 5px 0;
}
.navbar.navbar-default.navbar-store {
    margin: 0; position: absolute; width: 100%; border: none; border-radius: 0;;margin-left: -15px; min-height: 45px;
    background: #2b3136;
}
.store-view-content {
    padding-top: 50px;
}
.navbar-store .navbar-brand {
    line-height: normal; height: auto;
    padding: 10px 15px; color: #fff;
}
.navbar-store .navbar-nav>li>a, .navbar-store .navbar-nav>li>a:hover{
    padding-top: 13px; padding-bottom: 12px; color: #fff; text-transform: uppercase;
}

